<resources>
    <string name="app_name">手机传感器</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="logout">退出登录</string>
    <string name="register">注册账号</string>
    <string name="confirm">确认</string>
    <string name="profile_username_default">点击头像登录</string>
    <string name="index">首页</string>
    <string name="sensor">传感器</string>
    <string name="index_default">该手机有如下传感器：\n</string>
</resources>
