<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="登录"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userName"
                android:hint="@string/username"
                android:inputType="none"
                tools:ignore="Autofill"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/passWord"
                android:hint="@string/password"
                tools:ignore="Autofill"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="32dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/login"
                    android:background="@drawable/ripple_bg"
                    android:layout_weight="1"/>

            <View android:layout_width="10dp"
                  android:layout_height="match_parent"/>

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:background="@drawable/ripple_bg"
                    android:id="@+id/register"
                    android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>